# smartmodule

./: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
components/app_cli/: CMakeLists.txt  app_cli.c  app_cli.h  app_shell.c  app_shell.h
components/app_mqtt_protocol/: CMakeLists.txt
components/app_mqtt_protocol/include/: app_mqtt.h
components/app_mqtt_protocol/src/: app_mqtt.c
components/app_uart/: CMakeLists.txt
components/app_uart/include/: app_uart.h  lwrb.h  min_id.h
components/app_uart/src/: app_uart.c  min.c
components/app_wifi/: CMakeLists.txt
components/app_wifi/include/: app_wifi.h
components/app_wifi/src/: app_wifi.c
components/http_request/: CMakeLists.txt
components/http_request/include/: http_request.h
components/http_request/src/: http_request.c
components/lwrb/: CMakeLists.txt
components/min_protocol/: CMakeLists.txt  min.h  min_id.h
components/modem/: CMakeLists.txt  Kconfig
components/modem/include/: app_wifi.h  ec2x.h  ec600s.h  esp_modem.h  esp_modem_compat.h  esp_modem_dce.h  esp_modem_dce_service.h  gpio_defination.h  gsm_hardware.h  gsm_ultilities.h  gsm_utilities.h  hw_power.h
components/modem/src/: app_wifi.c  ec2x.c  ec600s.c  esp_modem.c  esp_modem_compat.c  esp_modem_dce_service.c  esp_modem_netif.c  gsm_hardware.c  gsm_ultilities.c  gsm_utilities.c  hw_power.c
components/nvs_flash_app/: CMakeLists.txt  nvs_flash_app.c  nvs_flash_app.h  version_control.h
components/ota_update/: CMakeLists.txt
components/sntp_service/: CMakeLists.txt
main/: CMakeLists.txt  pppos_client_main.c
(+4 files in other folders)
